cocogen/tests/pass/nodesets_attributes_repeat_constructor.ccn

root node ast {
    children {
        y y
    }
};

node a {
    children {
        b b
    }
};

node b {
    attributes {
        bool b,
        int val {constructor}
    }
};

start phase begin {
    actions {
        pass p;
    }
};


nodeset x = {ast};

nodeset y {
    nodes = {a, b, ast},
    attributes {
        int val {}
    }
};

traversal Letsgo {
    uid = go,

    travdata {
        int val,
        ast ast
    }
};
